--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         </div>
         <form action="">
             <input type="email" placeholder="your email.." readonly>
-            <input type="submit" value="Sucribe" class="btnnn">
+            <input type="submit" value="Subcribe" class="btnnn">
         </form>
     </div>
        
