--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             <p>Sign up with your email address to receive update.</p>
         </div>
         <form action="">
-            <input type="email" placeholder="your email.." readonly>
+            <input type="email" placeholder="your email.." readonly class="btnnn">
             <input type="submit" value="Subcribe" class="btnnn">
         </form>
     </div>
