Fixed some issues and add javascript

--- a/index.html
+++ b/index.html
@@ -286,13 +286,13 @@
                                 </div>
     </div>
 
-    <div class="n-btn">
+    <div class="n-btn" data-aos="zoom-in">
         <a href="#" class="btn2">View all</a>
     </div>
   </section>
   <!-- feature -->
    <section class="feature">
-    <div class="feature-content">
+    <div class="feature-content" data-aos="fade-down">
             <div class="box">
                 <div class="f-icon">
                     <i class="ri-bank-card-line"></i>
@@ -334,7 +334,7 @@
         <div class="center-text">
               <h2>Best Seller</h2>
         </div>
-        <div class="selling-content">
+        <div class="selling-content" data-aos="zoom-in-up">
             <div class="col">
                 <div class="col-img">
                     <img src="img/n1.png" alt="">
@@ -370,7 +370,7 @@
         </div>
    </section>
    <section class="newsletter">
-    <div class="newsletter-content">
+    <div class="newsletter-content" data-aos="zoom-in">
         <div class="newsletter-text">
             <h2>Get on the List!</h2>
             <p>Sign up with your email address to receive update.</p>
@@ -382,10 +382,10 @@
     </div>
        
    </section>
-   <section class="footer">
+   <section class="footer" data-aos="fade-down">
               <div class="footer-box">
                 <h3>company</h3>
-                <a href="">about</a>
+                <a href="">About</a>
                 <a href="">Feature</a>
                 <a href="">Works</a>
                 <a href="">Career</a>
@@ -393,7 +393,7 @@
               
               <div class="footer-box">
                 <h3>FAQ</h3>
-                <a href="">about</a>
+                <a href="">About</a>
                 <a href="">Feature</a>
                 <a href="">Works</a>
                 <a href="">Career</a>
